add_listners_for_video_capture

--- a/popup.html
+++ b/popup.html
@@ -1,1 +1,15 @@
-<h1>Hello World</h1>
+<html>
+
+<head>
+    <script src="background_service_worker.js" type="text/javascript"></script>
+    <script src="block_haram_content_script.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="popup.css">
+
+</head>
+
+<body>
+    <input type="checkbox" class="checkbox">
+
+</body>
+
+</html>
